# urdf2mjcf

./: .gitignore  CHANGELOG  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  package.xml  requirements.txt  rosdep.yaml  setup.py
docs/: README.md
docs/changelog_templates/: changelog.md
launch/: urdf2mjcf_converter.launch
scripts/: rd2urdf  urdf2mjcf  urdf2mjcf_ros
src/urdf2mjcf/: app.py  cli.py  core.py  urdf_from_robot_description.py
src/urdf2mjcf/default_elements/: lighting.py
test/: test_mujoco_passthrough.py  test_preprocess.py  test_rd2urdf.py  test_urdf2mjcf.py  utils.py
test/inputs/: ip_model_1.xml  ip_model_2.urdf  mujoco.xml  ros_uris.txt
test/outputs/: op_model_1.xml  op_model_2.xml  panda_mjnoded.xml  panda_sensored.xml  resolved_ros_uris.txt
