<?xml version="1.0"?>
<package format="2">
  <name>urdf2mjcf</name>
  <version>1.0.2</version>
  <description>The urdf2mjcf package</description>

  <maintainer email="balazs.andras.balint@ipa.fraunhofer.de">Bal치zs B치lint</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/urdf2mjcf</url> -->

  <author email="balazs.andras.balint@ipa.fraunhofer.de">Bal치zs B치lint</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>python3-rospkg</depend>
  <depend>python3-defusedxml</depend>
  <depend>python3-mujoco</depend>

  <test_depend>python3-pytest</test_depend>

</package>
